# AlignMolecule

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml  release.yml
examples/: Example_01.ovito
src/AlignMolecule/: __init__.py
src/MoleculeAlign/: __init__.py
tests/: test_modifier.py
